# onglory_langchain_PA

./: .gitignore  LICENSE  README.md  start_langchain.sh
google_server/: pyproject.toml  registration.py
langchain_ws/: agent.py  basic.py  chatbot.py  database.py  database_operations.py  database_sqlite.py  gmail.py  init.py  onglory_serve.py  onglory_trigger.py  output_pdf.py  rag.py  server.py  web_scraping.py
langchain_ws/langchain_agent/: client.py  functions.py  gmail.py  langchain_agent.py  metadata.py  pyproject.toml  self_defined_tool.py  server.py  server_playground.py  test.py  tools.py
langchain_ws/langchain_agent/langchain_agent/: client.py  functions.py  metadata.py  tools.py
langchain_ws/langchain_agent/news/: blockbeat_api.py  blockbeats_api.py  cryptopanic_api.py  news_api.py
langchain_ws/langchain_agent/templates/: playground.html
relevanceAI/: pyproject.toml
relevanceAI/relevanceai/: daily_summary_invoke.py  daily_summary_invoke_once.py  func.py  news_categorize_invoke.py  news_categorize_invoke_once.py
relevanceAI/relevanceai/relevanceai_func/: func.py
relevanceAI/relevanceai_func/: tg_func.py
server/: app.py  pyproject.toml  registration.py
