[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = ""
authors = ["hsuchaochun <leohsu210200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wikipedia = "^1.4.0"
numexpr = "^2.10.1"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
openai = "^1.41.0"
langchain-openai = "^0.1.22"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
